--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-project(equation_to_julia LANGUAGES C CXX)
+project(fractal_desmos LANGUAGES C CXX)
 
 add_subdirectory(lib/webgpu)
 if (NOT EMSCRIPTEN)
